<resources>
    <string name="app_name">Procrastinate Later</string>
    <string name="short_app_name">Pro Later</string>


    <string name="new_project">New Project</string>
    <string name="new_project_title">New Project Title</string>
    <string name="project_title">Project Title</string>
    <string name="select_image">Select an Image</string>
    <string name="select_due_date">Select a Due Date</string>
    <string name="opt_cmt">Time Commitment</string>
    <string name="opt_due">Due Date</string>
    <string name="date_button_text">Pick Date Here</string>
    <string name="opt_lng">Session Length</string>
    <string name="opt_frq">Session Frequency</string>

    <string name="create_project">Create</string>
    <string name="update_project">Update</string>
    <string name="clear_fields">Clear</string>
    <string name="delete_project">Delete</string>


    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="times_per">times per week</string>


    <string name="project_created"> has been added to your projects!</string>
    <string name="project_updated"> has been updated.</string>
    <string name="project_deleted"> has been deleted from your projects.</string>

    <string name="event_saved">Calendar event saved.</string>

    <string name="project_no_title">Missing a Project Title</string>
    <string name="project_missing_info">Please enter more information about your project.</string>
    <string name="project_message">Info about existing Project</string>
    <string name="lost_image">"I'm sorry. We can't seem to find this project's image.</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Home Activity</string>

    <string name="title_message">Why procrastinate today when you can procrastinate tomorrow?</string>
    <string name="manage_projects">Manage Projects</string>
    <string name="view_calendar">View Calendar</string>
    <string name="title_activity_calendar">Calendar Activity</string>
    <string name="no_sessions">No Procrastinate Later sessions planned for today</string>
    <string name="all_day">all day</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_tproject_list">tProjects</string>
    <string name="title_tproject_detail">tProject Detail</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_projects_list">Projects List</string>

    <string name="help">Help</string>
    <string name="explain_home">Procrastinate Later helps you achieve long term goals by breaking your project down into small,
        manageable pieces. Let us do the math! We add sessions into your Android calendar to get your project done on time.</string>
    <string name="explain_projects">When you give us information about a project, we calculate any missing information
        to set up your workout sessions, study hours, and house-cleaning schedules. Just make sure to fill out at least
        three of the four project criteria, unless you have a project with a set session time and frequency that should
        repeat forever!</string>
    <string name="title_activity_help">HelpActivity</string>
</resources>
