<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".2"
        android:orientation="vertical"
        android:id="@+id/scrollLayout">

        <FrameLayout
            android:id="@+id/newProjectFrame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/main_color">

            <ImageView
                android:id="@+id/newProjectImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/new_project_img"/>
        </FrameLayout>

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/projectsListView" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/projectScroll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".8">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/existing_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/projectImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/default_photo" />

            <EditText
                android:id="@+id/txtProjectTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:elegantTextHeight="false"
                android:hint="@string/project_title" />

            <fragment
                android:id="@+id/fragment_existing_projectProject"
                android:name="com.google.procrastinatelater.FragmentExistingProject"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout="@layout/fragment_progress" />

            <TextView
                android:id="@+id/textViewCmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/opt_cmt"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp">

                <EditText
                    android:id="@+id/txtTimeCmt"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hours"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </TableRow>

            <TextView
                android:id="@+id/textViewDue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt_due"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp">

                <EditText
                    android:id="@+id/txtDueDate"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="date" />

            </TableRow>

            <TextView
                android:id="@+id/textViewLng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt_lng"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp">

                <EditText
                    android:id="@+id/txtHrsLong"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="time" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hours"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/txtMinsLong"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:ems="10"
                    android:inputType="time" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minutes"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </TableRow>

            <TextView
                android:id="@+id/textViewFrq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opt_frq"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp">

                <EditText
                    android:id="@+id/txtFrq"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/times_per"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </TableRow>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/saveProjectButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/create_project"
                    android:layout_margin="10dp" />

                <Button
                    android:id="@+id/clearProjectButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/create_project"
                    android:layout_margin="10dp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>




